--- a/tylers_takes/wandavision.html
+++ b/tylers_takes/wandavision.html
@@ -21,9 +21,7 @@
         <img class="wanda_banner" src="pics/wandavision_banner.jpg" alt="Wandavision Banner">
         <div class="overview">
             <div class="text">
-                <h2>
-                    Tyler's Vision of Wandavision
-                </h2>
+                <h2 class="vision">Tyler's Vision of Wandavision</h2>
                 <p>
                     After the fallout of Avengers: Endgame, one of the questions on the minds of the MCU fanatics was, to quote the band Imagine Dragons, “Where do we go from here?” Coming off one of the largest movies ever made, they had established their monopoly on the superhero genre, and they were never going to lose it. Needless to say, everyone had high hopes for phase 4 of Marvel. </p>
                 <p>
@@ -44,7 +42,7 @@
                     Turns out, much of the show was orchestrated by a witch called Agatha Harkness, she tells Wanda that she has the power of an evil maggufin book, and that in the book it says that Wanda is going to destroy the whole world. She has been manipulating Wanda the whole time, including creatinng a fake Pietro, it turns out his real name is Ralph Bohner. That's right, possibly the biggest f-you to the entire fan base who thought the involvement of Evans was teasing a MCU X-Men Crossover, but nope it was a penis joke. Agnes brings down The Hex, temporarily, allowing Rambeau and Woo to get in, there's a big CGI fight between Wanda and Agnes, between Fake Vision and White Vision because apparently SWORD remade vision. How? Don't know, and don't think about it, just consume product and then get excited for new product. The Visions stop fighting to discuss the philosophical question of Theseus' Ship? Why? Don't know. Wanda defeats Agnes, absorbs her powers, because that's a thing she can do now apparently, and takes the evil maggufin book. She then makes the super selfless decision of sacrificing her fake family so that everyone in Westview can live their lives. Which leads to the dumbest line in all of the MCU:
                 </p>
                 <img class="kill_me" src="https://y.yarn.co/f1b47d1d-75b7-4bd9-8ec7-fbf3d4a8b401_text.gif" alt="Dumbest line in the MCU">
-                <h2>Tyler's Take</h2>
+                <h2 class="vision">Tyler's Take</h2>
                 <p>
                     For a show that has such a good start, it falls off in the worst possible way. It was a whole different feel of Marvel product, but just like Newton's third law states, "For every good thing in Marvel, there will be an equally bad thing". It had everything going for it but still managed to suck on a grand scale, just like the Republican's in the 2022 midterm election. I rate the first 3 episodes probably about 4 little red helicopters, but the last 5 episodes collectively barely pass the half helicopter threshold. It's intersting to learn a little more about Wanda's backstory, but by the end I found myself confused by all the mood shifts that seem to be plauging Phase 4, you must have some sort of quip every few minutes. An important character died? There's some terrible quip about how bad they were at pilates, or something else stupid.  Honestly, unless you really, really, really, like marvel this show provides almost nothing in terms of substance, including the constant denial that Wanda is a bad guy despite taking an entire fricking town hostage, except the introduction of the evil maggufin book. Don't watch it.
                 </p>
